--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,22 +1,58 @@
 <% layout('layouts/boilerplate') %>
-<div class="row">
-    <div class="col-6 offset-3">
-        <div class="card mb-5">
-            <img src="<%= campground.image %>" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title"><%= campground.title %></h5>
-                <p class="card-text"><%= campground.description %></p>
-            </div>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item text-secondary"><%= campground.location %></li>
-                <li class="list-group-item">$<%= campground.price %>/night</li>
-            </ul>
-            <div class="card-body">
-                <a class="card-link btn btn-info" href="/campground/<%= campground._id %>/edit">Edit</a>
-                <form class="d-inline" action="/campground/<%= campground._id %>/?_method=Delete" method="post">
-                    <button class="btn btn-danger" type="submit">Delete</button>
-                </form>
+    <div class="row">
+        <div class="col-6">
+            <div class="card mb-5">
+                <img src="<%= campground.image %>" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">
+                        <%= campground.title %>
+                    </h5>
+                    <p class="card-text">
+                        <%= campground.description %>
+                    </p>
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item text-secondary">
+                        <%= campground.location %>
+                    </li>
+                    <li class="list-group-item">$<%= campground.price %>/night</li>
+                </ul>
+                <div class="card-body">
+                    <a class="card-link btn btn-info" href="/campground/<%= campground._id %>/edit">Edit</a>
+                    <form class="d-inline" action="/campground/<%= campground._id %>/?_method=Delete" method="post">
+                        <button class="btn btn-danger" type="submit">Delete</button>
+                    </form>
+                </div>
             </div>
         </div>
+        <div class="col-6">
+            <h2>Leave a Review</h2>
+            <form class="validated-form" action="/campground/<%= campground._id %>/reviews" method="post" novalidate>
+                <div class="mb-3">
+                    <label class="form-label" for="rating">Rating</label>
+                    <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="body">Review</label>
+                    <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3" required></textarea>
+                    <div class="valid-feedback">
+                        Looks Good
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-success mb-3">Submit</button>
+            </form>
+            <% for(let review of campground.reviews) { %>
+                <div class="card mb-3">
+                    <div class="card-body">
+                        <h5 class="card-title">
+                            Rating : <%= review.rating %>
+                        </h5>
+                        <p class="card-text">
+                            Review : <%= review.body %>
+                        </p>
+                        <form action="/campground/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE" method="post"><button class="btn btn-sm btn-danger">Delete</button></form>
+                    </div>
+                </div>
+                <% } %>
+        </div>
     </div>
-</div>
