Yelp Camp Section 50

--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -2,7 +2,7 @@
     <div class="row">
         <h1 class="text-center">New Campground</h1>
         <div class="col-6 offset-3">
-            <form class="mb-3 validated-form" action="/campground" method="post" novalidate>
+            <form class="mb-3 validated-form" action="/campgrounds" method="post" novalidate>
                 <div class="mb-3">
                     <label class="form-label" for="title">Title</label>
                     <input class="form-control" type="text" id="title" name="campground[title]" required>
@@ -45,7 +45,7 @@
                 </div>
                 <button class="btn btn-secondary">Add Campground</button>
             </form>
-            <a href="/campground">Go Back</a>
+            <a href="/campgrounds">Go Back</a>
         </div>
     </div>
 
