--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -18,8 +18,8 @@
                     <li class="list-group-item">$<%= campground.price %>/night</li>
                 </ul>
                 <div class="card-body">
-                    <a class="card-link btn btn-info" href="/campground/<%= campground._id %>/edit">Edit</a>
-                    <form class="d-inline" action="/campground/<%= campground._id %>/?_method=Delete" method="post">
+                    <a class="card-link btn btn-info" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
+                    <form class="d-inline" action="/campgrounds/<%= campground._id %>/?_method=Delete" method="post">
                         <button class="btn btn-danger" type="submit">Delete</button>
                     </form>
                 </div>
@@ -27,7 +27,7 @@
         </div>
         <div class="col-6">
             <h2>Leave a Review</h2>
-            <form class="validated-form" action="/campground/<%= campground._id %>/reviews" method="post" novalidate>
+            <form class="validated-form" action="/campgrounds/<%= campground._id %>/reviews" method="post" novalidate>
                 <div class="mb-3">
                     <label class="form-label" for="rating">Rating</label>
                     <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating">
@@ -50,7 +50,8 @@
                         <p class="card-text">
                             Review : <%= review.body %>
                         </p>
-                        <form action="/campground/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE" method="post"><button class="btn btn-sm btn-danger">Delete</button></form>
+                        <form action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE"
+                            method="post"><button class="btn btn-sm btn-danger">Delete</button></form>
                     </div>
                 </div>
                 <% } %>
