--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -15,45 +15,65 @@
                     <li class="list-group-item text-secondary">
                         <%= campground.location %>
                     </li>
+                    <li class="list-group-item">Submitted by <span class="text-secondary">
+                            <%= campground.author.username %>
+                        </span></li>
                     <li class="list-group-item">$<%= campground.price %>/night</li>
                 </ul>
-                <div class="card-body">
-                    <a class="card-link btn btn-info" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
-                    <form class="d-inline" action="/campgrounds/<%= campground._id %>/?_method=Delete" method="post">
-                        <button class="btn btn-danger" type="submit">Delete</button>
-                    </form>
-                </div>
+                <% if(currentUser && campground.author.equals(currentUser._id)) { %>
+                    <div class="card-body">
+                        <a class="card-link btn btn-info" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
+                        <form class="d-inline" action="/campgrounds/<%= campground._id %>/?_method=Delete"
+                            method="post">
+                            <button class="btn btn-danger" type="submit">Delete</button>
+                        </form>
+                    </div>
+                    <% } %>
             </div>
         </div>
         <div class="col-6">
-            <h2>Leave a Review</h2>
-            <form class="validated-form" action="/campgrounds/<%= campground._id %>/reviews" method="post" novalidate>
-                <div class="mb-3">
-                    <label class="form-label" for="rating">Rating</label>
-                    <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating">
-                </div>
-                <div class="mb-3">
-                    <label class="form-label" for="body">Review</label>
-                    <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3" required></textarea>
-                    <div class="valid-feedback">
-                        Looks Good
+            <% if(currentUser){ %>
+                <h2>Leave a Review</h2>
+                <form class="validated-form" action="/campgrounds/<%= campground._id %>/reviews" method="post"
+                    novalidate>
+                    <div class="mb-3">
+                        <label class="form-label" for="rating">Rating</label>
+                        <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating">
                     </div>
-                </div>
-                <button type="submit" class="btn btn-success mb-3">Submit</button>
-            </form>
-            <% for(let review of campground.reviews) { %>
-                <div class="card mb-3">
-                    <div class="card-body">
-                        <h5 class="card-title">
-                            Rating : <%= review.rating %>
-                        </h5>
-                        <p class="card-text">
-                            Review : <%= review.body %>
-                        </p>
-                        <form action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE"
-                            method="post"><button class="btn btn-sm btn-danger">Delete</button></form>
+                    <div class="mb-3">
+                        <label class="form-label" for="body">Review</label>
+                        <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3"
+                            required></textarea>
+                        <div class="valid-feedback">
+                            Looks Good
+                        </div>
                     </div>
-                </div>
+                    <button type="submit" class="btn btn-success mb-3">Submit</button>
+                </form>
                 <% } %>
+                    <% for(let review of campground.reviews) { %>
+                        <div class="card mb-3">
+                            <div class="card-body">
+                                <h5 class="card-title">
+                                    Rating : <%= review.rating %>
+                                </h5>
+                                <% if(review.author) { %>
+                                    <h6 class="card-subtitle mb-2 text-secondary">
+                                        By <%= review.author.username%>
+                                    </h6>
+                                    <% } %>
+                                        <p class="card-text">
+                                            Review : <%= review.body %>
+                                        </p>
+                                        <% if((currentUser && review.author) && review.author.equals(currentUser._id)) {
+                                            %>
+                                            <form
+                                                action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE"
+                                                method="post"><button class="btn btn-sm btn-danger">Delete</button>
+                                            </form>
+                                            <% } %>
+                            </div>
+                        </div>
+                        <% } %>
         </div>
     </div>
