--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,4 +1,6 @@
 <% layout('layouts/boilerplate') %>
+    <link rel="stylesheet" href="/stylesheet/style.css">
+
     <div class="row">
         <div class="col-6">
             <div class="card mb-5">
@@ -37,8 +39,20 @@
                 <form class="validated-form" action="/campgrounds/<%= campground._id %>/reviews" method="post"
                     novalidate>
                     <div class="mb-3">
-                        <label class="form-label" for="rating">Rating</label>
-                        <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating">
+                        <fieldset class="starability-basic">
+                            <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1"
+                                checked aria-label="No rating." />
+                            <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+                            <label for="first-rate1" title="Terrible">1 star</label>
+                            <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+                            <label for="first-rate2" title="Not good">2 stars</label>
+                            <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+                            <label for="first-rate3" title="Average">3 stars</label>
+                            <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+                            <label for="first-rate4" title="Very good">4 stars</label>
+                            <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+                            <label for="first-rate5" title="Amazing">5 stars</label>
+                        </fieldset>
                     </div>
                     <div class="mb-3">
                         <label class="form-label" for="body">Review</label>
@@ -54,14 +68,15 @@
                     <% for(let review of campground.reviews) { %>
                         <div class="card mb-3">
                             <div class="card-body">
-                                <h5 class="card-title">
-                                    Rating : <%= review.rating %>
-                                </h5>
                                 <% if(review.author) { %>
-                                    <h6 class="card-subtitle mb-2 text-secondary">
-                                        By <%= review.author.username%>
-                                    </h6>
+                                    <h5 class="h5">
+                                        <%= review.author.username%>
+                                    </h5>
                                     <% } %>
+                                        <p class="starability-result" data-rating="<%= review.rating %>">
+                                            Rated: 3 stars
+                                        </p>
+
                                         <p class="card-text">
                                             Review : <%= review.body %>
                                         </p>
