--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -4,7 +4,11 @@
         <div class="card mb-3">
             <div class="row">
                 <div class="col-md-4">
-                    <img class="img-fluid" alt="" src="<%=campground.image%>">
+                    <% if(campground.images.length) { %>
+                    <img class="img-fluid" alt="" src="<%=campground.images[0].url%>">
+                    <% } else { %>
+                    <img class="img-fluid" alt="" src="https://res.cloudinary.com/dtflcs1ha/image/upload/f_auto,q_auto/v1/samples/landscapes/nature-mountains">    
+                    <% } %>
                 </div>
                 <div class="col-md-8">
                     <h5 class="card-title">
